<resources>
    <string name="app_name">My Application</string>
    <string name="Newyear">День России</string>
    <string name="Daytruda">День труда</string>
    <string name="Rogdestvo">Рождество Христово</string>
    <string name="Marta">Новый год</string>
    <string name="Daywinner">День победы</string>
    <string name="DaywinnerF">Международный женский день</string>
    <string name="button13">День народного единства</string>
    <string name="Febrary">День защитника Отечества</string>

</resources>