<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity3">


    <Button
        android:id="@+id/Febrary23"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="141dp"
        android:layout_marginBottom="8dp"
        android:text="@string/Febrary"
        app:layout_constraintBottom_toTopOf="@+id/Marta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Rogdestvo" />

    <Button
        android:id="@+id/button13"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="141dp"
        android:layout_marginBottom="8dp"
        android:text="@string/button13"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DayRassia" />

    <Button
        android:id="@+id/Marta"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="141dp"
        android:layout_marginBottom="8dp"
        android:text="@string/DaywinnerF"
        app:layout_constraintBottom_toTopOf="@+id/Daytruda"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Febrary23" />

    <Button
        android:id="@+id/Daywinner"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="141dp"
        android:layout_marginBottom="8dp"
        android:text="@string/Daywinner"
        app:layout_constraintBottom_toTopOf="@+id/DayRassia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Daytruda" />

    <Button
        android:id="@+id/DayRassia"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="141dp"
        android:layout_marginBottom="8dp"
        android:text="@string/Newyear"
        app:layout_constraintBottom_toTopOf="@+id/button13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Daywinner" />

    <Button
        android:id="@+id/Daytruda"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="141dp"
        android:layout_marginBottom="8dp"
        android:text="@string/Daytruda"
        app:layout_constraintBottom_toTopOf="@+id/Daywinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Marta" />

    <Button
        android:id="@+id/Rogdestvo"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="141dp"
        android:layout_marginBottom="8dp"
        android:text="@string/Rogdestvo"
        app:layout_constraintBottom_toTopOf="@+id/Febrary23"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Newyear2" />

    <Button
        android:id="@+id/Newyear2"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="141dp"
        android:layout_marginBottom="8dp"
        android:text="Новый год"
        app:layout_constraintBottom_toTopOf="@+id/Rogdestvo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/NAZAD"
        android:layout_width="88dp"
        android:layout_height="39dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="300dp"
        android:layout_marginBottom="10dp"
        android:text="Назад"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/Newyear2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>